src/test/deca/context/invalid/renduInter01/00EXCLAM_type_incompatible.deca
// Description:
//      Expression conditionnelle incorrecte au niveau du typage
//      => l'opérateur NOT est uniquement applicable sur un booléen
//
// Resultats:
//      Erreur contextuelle
//      Ligne 11 : Type string incompatible avec l'opérateur NOT

{
    int x = 42;
    if ( !x ) {
        println("ok");
    }
}
